# SearchBot

./: .env.example  bot_texts.json  docker-compose.yaml  pyproject.toml  test.py
bot/: container.py  loader.py  main.py  reloader.py
bot/handlers/: chat.py  keyword.py  lang.py  lead_chat.py  project.py  routing.py  search.py  start.py  state.py  utils.py
bot/keyboards/: reply.py
bot/utils/: bot.py  pagination.py  userbot.py
userbots/: handlers.py  login.py  main.py
userbots/utils/: message.py  peer.py  search.py
web/admin/: mixins.py
web/apps/bots/: admin.py  apps.py  model_mixins.py  models.py
web/apps/bots/migrations/: 0001_initial.py  0002_alter_userbot_api_hash_alter_userbot_api_id.py  0002_botkeyboard_botkeyboardbutton_and_more.py  0002_userbot_telegram_id.py  0003_botkeyboard_slug_alter_botkeyboard_name.py  0003_remove_userbot_session_userbot_session_1_and_more.py  0004_remove_botkeyboardbutton_unique_button_text_per_keyboard_and_more.py  0005_botkeyboardbutton_name.py  0006_englishbottexts_hebrewbottexts_russianbottexts.py  0007_alter_englishbottexts_options_and_more.py  0008_remove_botkeyboard_type_and_more.py  0009_englishbottexts_permission_denied_text_and_more.py  0010_englishbottexts_project_exists_error_text_and_more.py  0011_englishbottexts_analytic_match_report_text_and_more.py  0016_alter_userbot_session_string.py  (+7 more)
web/apps/search/: admin.py  apps.py  models.py  signals.py  tasks.py
web/apps/telegram_users/: admin.py  models.py  tasks.py
web/core/: celery.py  settings.py
web/db/: model_mixins.py
web/services/: telegram.py
(+23 files in other folders)
